--- a/leetcode_daily/LC1162. As Far from Land as Possible.md
+++ b/leetcode_daily/LC1162. As Far from Land as Possible.md
@@ -21,37 +21,44 @@
 - 空间复杂度：
   - o(n^2)或o(1)
 - 结果:
-  - 用时：26%（140ms）
-  - 内存：14%
+  - 用时：80%（100ms）
+  - 内存：50%（16.4MB）
 ```
 class Solution {
-    int x[4]={0,0,-1,1};
-    int y[4]={-1,1,0,0};
+    int x[4]={-1,1,0,0};
+    int y[4]={0,0,-1,1};
 public:
     int maxDistance(vector<vector<int>>& grid) {
-        vector<pair<int,int>> vct;
-        for(int i=0;i<grid.size();i++){
-            for(int j=0;j<grid[0].size();j++){
-                if(grid[i][j]==1) vct.push_back({i,j});
+        int res=0, m=grid.size(), n=grid[0].size();
+        //bfs辅助队列
+        queue<pair<int,int>> q;
+        //将初始根节点压入
+        for(int i=0;i<m;i++){
+            for(int j=0;j<n;j++){
+                if(grid[i][j]==1) q.push({i,j});
             }
         }
-        int begin=0,res=0,end=vct.size();
-        bool has_push_back=true;
-        if(end==0 || end==grid.size()*grid[0].size()) return -1;
-        while(has_push_back){
-            has_push_back=false;
-            for(int i=begin;i<end;i++){
-                for(int d=0;d<4;d++){
-                    int x_pos = vct[i].first + x[d], y_pos = vct[i].second + y[d];
-                    if(x_pos>=0 && x_pos<grid.size() && y_pos>=0 && y_pos<grid[0].size() && grid[x_pos][y_pos]==0){
-                        vct.push_back({x_pos,y_pos});
-                        grid[x_pos][y_pos]=1;
-                        has_push_back=true;
+        if(q.size()==0 || q.size()==m*n) return -1;
+        //当队列非空的时候，循环
+        while(!q.empty()){
+            //对当前队列的所有元素执行操作
+            bool visited=false;
+            int end=q.size();
+            for(int i=0;i<end;i++){
+                //取出队头元素，判断四个方向的合法性，以及是否访问过
+                //将合法的未访问过的元素，加入到队列中，并标记
+                pair<int,int> pos=q.front(); q.pop();
+                for(int j=0;j<4;j++){
+                    int xp=pos.first+x[j], yp=pos.second+y[j];
+                    if(xp>=0 && xp<m && yp>=0 && yp<n && grid[xp][yp]==0){
+                        q.push({xp,yp});
+                        grid[xp][yp]=1;
+                        visited=true;
                     }
                 }
             }
-            begin=end, end=vct.size();
-            if(has_push_back) res++;
+            //如果本轮次有入队操作，则res++
+            if(visited) res++;
         }
         return res;
     }
