--- a/leetcode_daily/LC994. Rotting Oranges.md
+++ b/leetcode_daily/LC994. Rotting Oranges.md
@@ -22,44 +22,42 @@
 - 时间复杂度：
   - o(m*n)
 - 空间复杂度：
-  - o(m*n)
+  - o(1)
 - 结果:
-  - 用时：97%（4ms）
-  - 内存：5%
+  - 用时：46%（12ms）
+  - 内存：100%（7.2MB）
 ```
 class Solution {
-    vector<vector<int>> rotting;
-    bool rotted=false;
-    int fresh=0;
-    void ins(vector<vector<int>>& grid, int i, int j){
-        rotting.push_back({i,j});
-        rotted=true;
-        fresh--;
-        grid[i][j]=2;
-    }
+    int x[4]={-1,1,0,0};
+    int y[4]={0,0,-1,1};
 public:
     int orangesRotting(vector<vector<int>>& grid) {
-        int begin=0,res=0;
-        for(int i=0;i<grid.size();i++){
-            for(int j=0;j<grid[0].size();j++){
-                if(grid[i][j]==2) rotting.push_back({i,j}),rotted=true;
+        int res=0, fresh=0, m=grid.size(), n=grid[0].size();
+        queue<pair<int,int>> q;
+        for(int i=0;i<m;i++){
+            for(int j=0;j<n;j++){
                 if(grid[i][j]==1) fresh++;
+                else if(grid[i][j]==2) q.push({i,j});
             }
         }
-        while(rotted){
-            rotted=false;
-            int end=rotting.size();
-            for(int i=begin;i<end;i++){
-                if(rotting[i][0]-1>=0 && grid[rotting[i][0]-1][rotting[i][1]]==1) ins(grid, rotting[i][0]-1, rotting[i][1]);
-                if(rotting[i][0]+1<=grid.size()-1 && grid[rotting[i][0]+1][rotting[i][1]]==1) ins(grid, rotting[i][0]+1, rotting[i][1]);
-                if(rotting[i][1]-1>=0 && grid[rotting[i][0]][rotting[i][1]-1]==1) ins(grid, rotting[i][0], rotting[i][1]-1);
-                if(rotting[i][1]+1<=grid[0].size()-1 && grid[rotting[i][0]][rotting[i][1]+1]==1) ins(grid, rotting[i][0], rotting[i][1]+1);
+        while(!q.empty()){
+            int end=q.size();
+            bool rotted=false;
+            for(int i=0;i<end;i++){
+                pair<int,int> pos=q.front(); q.pop();
+                for(int j=0;j<4;j++){
+                    int xp=pos.first+x[j], yp=pos.second+y[j];
+                    if(xp>=0 && xp<m && yp>=0 && yp<n && grid[xp][yp]==1){
+                        q.push({xp,yp});
+                        grid[xp][yp]=2;
+                        rotted=true;
+                        fresh--;
+                    }
+                }
             }
-            begin=end;
             if(rotted) res++;
-            else break;
         }
-        return fresh?-1:res;
+        return fresh==0?res:-1;
     }
 };
 ```
